# Ikos

./: .gitignore  CHANGELOG.md  EXAMPLES.md  GIT_GUIDE.md  NATIVE_ENGINE_README.md  README.md  README_en.md  main.py  pyproject.toml  智能知识构建系统架构文档.md
.cursor/rules/: development-standards.mdc
config/: models.yaml  settings.yaml
config/prompts/: stage1_parse.yaml  stage2_search.yaml  stage3_filter.yaml  stage4_output.yaml
data/: ui_config.json
docs/: UI 集成总结.md  原生引擎实现总结.md  原生推理引擎使用指南.md  智能知识构建系统架构文档.md  模型源使用指南.md  缓存管理指南.md
docs/source/: conf.py  index.rst
docs/source/api/: core.rst  stage1.rst  stage2.rst  stage3.rst  stage4.rst
docs/source/dev/: architecture.rst  contributing.rst
docs/source/user/: installation.rst  quickstart.rst
examples/: model_source_demo.py
ikos/: __init__.py  main.py
ikos/core/: __init__.py  engine_switcher.py  hardware_detector.py  model_provider.py  native_inference_engine.py  native_model_loader.py  ollama_provider.py  openai_provider.py  pipeline.py  playwright_search.py  quantization_config.py  search_provider.py  search_provider_base.py  types.py  vote_engine.py  vram_manager.py
ikos/stage1_requirement/: __init__.py  parser.py  supervisor.py  validator.py
ikos/stage2_search/: __init__.py  memo.py  searcher.py  task_splitter.py
ikos/stage3_filter/: __init__.py  initial_filter.py  knowledge_graph.py  merger.py  refiner.py
ikos/stage4_output/: __init__.py  db_output.py  dispatcher.py  file_output.py
ikos/ui/: __init__.py  config_manager.py  launch_qml.py  main_window.py  main_window_qml.py  qml_bridge.py
ikos/ui/components/: __init__.py  hardware_monitor.py  model_manager.py  stage_indicator.py
ikos/ui/qml/: InputPanel.qml  Main.qml  OutputPanel.qml  README.md  Theme.qml
ikos/utils/: __init__.py  cache_cli.py  cache_manager.py  config_loader.py  logger.py  model_downloader.py  model_source.py
tests/: __init__.py  test_cache_manager.py  test_core.py  test_hardware.py  test_integration.py  test_model_source.py  test_native_engine.py  test_pipeline.py  test_qml_ui.py  test_quantization.py  test_ui_components.py  test_ui_config.py  test_ui_config_manager.py  test_vram_manager.py
